Move from ifPresentOrElse to orElseThrow. Few styling improvements